--- a/about-us/styles.css
+++ b/about-us/styles.css
@@ -89,32 +89,58 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 3rem;
+    background-color: #252C2C;
+    width: 100%;
+    height: 100%;
 }
 
-section h3 {
-    height: 100px;
+.mission-container, .about-us-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    width: 80%;
+
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+     -ms-animation: fadein 2s; /* Internet Explorer */
+      -o-animation: fadein 2s; /* Opera < 12.1 */
+         animation: fadein 2s;}
+
+.mission-statement h2, .about-us-statement h2 {
     font-family: 'Assistant-Bold';
     color: #04A5BD;
-    font-size: 50px;
-    text-align: center;
+    font-size: 30px;
 }
 
-.about-us {
+.mission-container img, .about-us-container img {
+    max-width: 100%;
+}
+
+.about-us-statement h3 {
+    font-family: 'Assistant-Bold';
+    color: white;
+    font-size: 20px;
+}
+
+.mission-statement p {
+    font-family: 'Assistant-regular';
+}
+
+.about-us-statement p {
+    font-family: 'Assistant-regular';
+    line-height: 2;
+}
+
+.about-us-statement {
     display: flex;
-    width: 50%;
+    flex-direction: column;
     gap: 2rem;
 }
-
-.about-us p {
-    font-family: 'Assistant-Regular';
-}
-
-.about-us img{
-    width: 15rem;
-    height: auto;
-}
-
 
 footer {
     display: flex;
@@ -183,8 +209,15 @@ footer {
         flex-direction: column;
         gap: 5rem;
     }
-    
 
+    .mission-container, .about-us-container {
+        flex-direction: column;
+    }
+
+    /* .mission-container img, .about-us-container img {
+        width: 10%;
+    } */
+    
     nav {
         opacity: 1;
     }
@@ -345,4 +378,33 @@ footer {
     } to {
         opacity: 1;
     }    
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
