--- a/book-service/styles.css
+++ b/book-service/styles.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Assistant-Bold';
-    src: url('/fonts/Assistant-Bold.ttf');
+    src: url('./fonts/Assistant-Bold.ttf');
 }
 
 @font-face {
     font-family: 'Assistant-Regular';
-    src: url('/fonts/Assistant-Regular.ttf');
+    src: url('./fonts/Assistant-Regular.ttf');
 }
   
 
