--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ header p {
     border: 2px solid #04A5BD;
 }
 
-.contactForm button {
+.contactForm .submit-button {
     border-radius: 5px;
     max-width: 200px;
     height: 3rem;
